fix: tab strip now initializes its tabs in background
This is done because some components such as grids do some width/height initializations, and doing a display: none for tab content div would prevent that.

--- a/projects/mona-ui/src/lib/layout/modules/tab-strip/components/tab-strip/tab-strip.component.html
+++ b/projects/mona-ui/src/lib/layout/modules/tab-strip/components/tab-strip/tab-strip.component.html
@@ -27,10 +27,11 @@
             </button>
         </div>
     </div>
-    <ng-container *ngFor="let tab of tabComponents">
-        <div class="mona-tab-content" [ngClass]="{'mona-tab-hidden': keepTabContent && !tab.selected}"
-             *ngIf="keepTabContent || tab.selected">
-            <ng-container [ngTemplateOutlet]="tab.contentTemplate"></ng-container>
-        </div>
-    </ng-container>
+    <div class="mona-tab-content">
+        <ng-container #tabContentContainer></ng-container>
+    </div>
+</div>
+
+<div style="display: block; width: 0; height: 0; overflow: hidden;" #initialLoadContainer>
+    <ng-container #initialLoadAnchor></ng-container>
 </div>
