fix: various style updates

--- a/projects/mona-ui-tester/src/app/app.component.scss
+++ b/projects/mona-ui-tester/src/app/app.component.scss
@@ -36,7 +36,7 @@ div.content {
 
 div.component-container {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 29px);
     //display: flex;
     //align-items: center;
     //justify-content: center;
