--- a/projects/mona-ui/src/lib/layout/modules/stepper/components/stepper/stepper.component.scss
+++ b/projects/mona-ui/src/lib/layout/modules/stepper/components/stepper/stepper.component.scss
@@ -11,6 +11,10 @@ div.mona-stepper {
     }
 }
 
+div.mona-stepper-horizontal {
+    margin-top: $step-height / -2;
+}
+
 ol.mona-stepper-step-list {
     position: absolute;
     display: flex;
