--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -159,6 +159,7 @@
                             <div>
                                 <button monaButton>Button 1</button>
                                 <button monaButton>Button 2</button>
+                                <button monaButton [flat]="true">Flat Button</button>
                             </div>
                             <div>
                                 <mona-button-group selection="multiple">
@@ -319,6 +320,16 @@
                                         <fa-icon [icon]="snowflakeIcon" style="font-size: 24px; margin-top: 0px;" [ngStyle]="{'color': active?'#6daf76':'#95c5cb'}"></fa-icon>
                                     </ng-template>
                                 </mona-stepper>
+                                <mona-range-slider [labelStep]="1" [(value)]="rangedSliderValues"
+                                                   orientation="horizontal" labelPosition="after"
+                                                   style="width: 500px;" [min]="0" [max]="24" [step]="1">
+                                    <ng-template monaSliderTickValueTemplate let-value>
+                                        <fa-icon [icon]="moonIcon" *ngIf="value < 6 || value > 22"
+                                                 style="color: mediumpurple;"></fa-icon>
+                                        <fa-icon [icon]="sunIcon" *ngIf="value >= 6 && value <= 22"
+                                                 style="color: #fafd0f;"></fa-icon>
+                                    </ng-template>
+                                </mona-range-slider>
                             </div>
 
                         </div>
